menu lateral e icones

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/style.css">
     <title>Sistema estacionamento</title>
 </head>
 <body>
-    <h1>Teste index</h1>
+    <div class="menu-lateral">
+        <div class="logomarca">
+            <img src="../assets/img/logo-estaciona-fácil.png" alt="Logo">
+        </div>
+        <a class="icones" href="#home"><img src="../assets/img/icone-casa-cinza.png" alt=""></a>
+        <a class="icones" href="#services"><img src="../assets/img/icone-estacionar.png" alt=""></a>
+        <a class="icones" href="#contact"><img src="../assets/img/icone-pagamento.png" alt=""></a>
+        <a class="icones" href="#about"><img src="../assets/img/icone-recibo.png" alt=""></a>
+        <a class="icones" href="#about"><img src="../assets/img/icone-configuracoes.png" alt=""></a>
+    </div>
+
+    <div class="topbar">
+        <div class="login">
+            <a href="#login"><i class="fa fa-user"></i></a>
+        </div>
+    </div>
+
+    <div class="content">
+        <h1>Conteúdo Principal</h1>
+    </div>
 </body>
 </html>
