--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,22 +7,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Sistema estacionamento</title>
 </head>
-<body>
+<body onload="startTime()">
     <div class="menu-lateral">
         <div class="logomarca">
             <img src="../assets/img/logo-estaciona-fácil.png" alt="Logo">
         </div>
-        <a class="icones" href="#home"><img src="../assets/img/icone-casa-cinza.png" alt=""></a>
-        <a class="icones" href="#services"><img src="../assets/img/icone-estacionar.png" alt=""></a>
-        <a class="icones" href="#contact"><img src="../assets/img/icone-pagamento.png" alt=""></a>
-        <a class="icones" href="#about"><img src="../assets/img/icone-recibo.png" alt=""></a>
-        <a class="icones" href="#about"><img src="../assets/img/icone-configuracoes.png" alt=""></a>
+        <a class="icones" href="#"><img src="../assets/img/icone-casa-cinza.png" alt=""></a>
+        <a class="icones" href="#"><img src="../assets/img/icone-estacionar.png" alt=""></a>
+        <a class="icones" href="pagamento.html"><img src="../assets/img/icone-pagamento.png" alt=""></a>
+        <a class="icones" href="#"><img src="../assets/img/icone-recibo.png" alt=""></a>
+        <a class="icones" href="#"><img src="../assets/img/icone-configuracoes.png" alt=""></a>
     </div>
 
     <div class="topbar">
         <div class="login">
-            <a href="#login"><i class="fa fa-user"></i></a>
+            <a href="#login"><img id="icone-usuario" src="../assets/img/user-branco.png" alt=""></a>
         </div>
+        <div id="hora"></div>
     </div>
 
     <main class="content">
