adcionando ao localstorage, funcionalidade pagar e saída

--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
                         <th>Valor da Hora</th>
                         <th>Forma de Pagamento</th>
                         <th>Status</th>
+                        <th>Hora de Saída</th>
                         <th>Ações</th>
                     </tr>
                 </thead>
