--- a/app/pagamento.html
+++ b/app/pagamento.html
@@ -34,7 +34,7 @@
         <div id="card-pagamento">
             
             <div id="cupom-pagamento">
-                <h1>pagamento teste</h1>
+                
             </div>
             <div id="imagem">
             <img src="../assets/img/logo estaciona fácil preto.png" alt="">
@@ -47,6 +47,6 @@
             <button id="dinheiro">DINHEIRO</button>
         </div>
     </main>
-   <script src="../js/script.js"></script>
+   <script src="../js/pagamento.js"></script>
 </body>
 </html>
