adicionado página home

--- a/app/pagamento.html
+++ b/app/pagamento.html
@@ -12,9 +12,9 @@
         <div class="logomarca">
             <img src="../assets/img/logo-estaciona-fácil.png" alt="Logo">
         </div>
-        <a class="icones" href="#"><img src="../assets/img/icone-casa-cinza.png" alt=""></a>
+        <a class="icones" href="home.html"><img src="../assets/img/icone-casa-cinza.png" alt=""></a>
         <a class="icones" href="index.html"><img src="../assets/img/icone-estacionar.png" alt=""></a>
-        <a class="icones" href="#"><img src="../assets/img/icone-pagamento.png" alt=""></a>
+        <a class="icones" href="pagamento.html"><img src="../assets/img/icone-pagamento.png" alt=""></a>
         <a class="icones" href="#"><img src="../assets/img/icone-recibo.png" alt=""></a>
         <a class="icones" href="#"><img src="../assets/img/icone-configuracoes.png" alt=""></a>
     </div>
