--- a/app/home.html
+++ b/app/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../assets/style-home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Sistema estacionamento</title>
 </head>
@@ -25,41 +25,30 @@
         </div>
         <div id="hora"></div>
     </div>
+    <script src="../js/script.js"></script> ></script>
 
     <main class="content">
-        <div id="card-formulario">
-            <form id="formulario-principal" action="">
-                <input id="placa" class="form-control" placeholder="placa" type="text">
-                <input id="tipo" class="form-control" placeholder="tipo" type="text">
-                <input id="descricao" class="form-control" placeholder="descrição" type="text">
-                <button id="botao-form" type="button" class="btn btn-secondary" onclick="adicionarNaTabela()">&rarr;</button>
-            </form>
+
+        <div>
+            <img id="imagem-home" src="../assets/img/casa.png" alt="">
+            <h3>Home</h3>
         </div>
 
-
-        <div id="data-table">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Placa</th>
-                        <th>Tipo</th>
-                        <th>Descrição</th>
-                        <th>Hora</th>
-                        <th>Valor da Hora</th>
-                        <th>Forma de Pagamento</th>
-                        <th>Status</th>
-                        <th>Hora de Saída</th>
-                        <th>Ações</th>
-                    </tr>
-                </thead>
-                <tbody id="corpo-da-tabela">
-                </tbody>
-            </table>
+        <div class="cards"> 
+            <div class="bloco">
+                <img class="imagem-bloco" src="../assets/img/estacionamento-branco.png" alt="">
+                <p>Vagas disponível:</p>
+                <p id="quantidade-de-vagas">10 vagas</p>
+            </div>
+    
+            <div class="bloco">
+                <img class="imagem-bloco" src="../assets/img/preço.png" alt="">
+                <p>Preços:</p>
+                <p>R$ 12,00 a hora R$ 00,20 por minuto</p>
+            </div>
         </div>
 
-
-
+        
     </main>
-   <script src="../js/script.js"></script>
 </body>
 </html>
