adicionado calculo de vagas

--- a/app/home.html
+++ b/app/home.html
@@ -25,30 +25,28 @@
         </div>
         <div id="hora"></div>
     </div>
-    <script src="../js/script.js"></script> ></script>
 
     <main class="content">
-
         <div>
             <img id="imagem-home" src="../assets/img/casa.png" alt="">
             <h3>Home</h3>
         </div>
 
-        <div class="cards"> 
+        <div class="cards">
             <div class="bloco">
                 <img class="imagem-bloco" src="../assets/img/estacionamento-branco.png" alt="">
                 <p>Vagas disponível:</p>
-                <p id="quantidade-de-vagas">10 vagas</p>
+                <p id="quantidade-de-vagas">30 vagas</p> <!-- Este elemento será atualizado pelo JavaScript -->
             </div>
-    
+
             <div class="bloco">
                 <img class="imagem-bloco" src="../assets/img/preço.png" alt="">
                 <p>Preços:</p>
                 <p>R$ 12,00 a hora R$ 00,20 por minuto</p>
             </div>
         </div>
-
-        
     </main>
+
+    <script src="../js/script.js"></script>
 </body>
 </html>
