--- a/app/index.html
+++ b/app/index.html
@@ -32,10 +32,9 @@
                 <input id="placa" class="form-control" placeholder="placa" type="text">
                 <input id="tipo" class="form-control" placeholder="tipo" type="text">
                 <input id="descricao" class="form-control" placeholder="descrição" type="text">
-                <button id="botao-form" type="button" class="btn btn-secondary" onclick="adicionarNaTabela()">&rarr;</button>
+                <button id="botao-form" type="button" class="btn btn-secondary" >&rarr;</button>
             </form>
         </div>
-
 
         <div id="data-table">
             <table class="table table-striped">
@@ -56,10 +55,7 @@
                 </tbody>
             </table>
         </div>
-
-
-
     </main>
-   <script src="../js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
