--- a/app/pagamento.html
+++ b/app/pagamento.html
@@ -32,12 +32,9 @@
         </div>
 
         <div id="card-pagamento">
-            
-            <div id="cupom-pagamento">
-                
-            </div>
+            <div id="cupom-pagamento"></div>
             <div id="imagem">
-            <img src="../assets/img/logo estaciona fácil preto.png" alt="">
+                <img src="../assets/img/logo estaciona fácil preto.png" alt="">
             </div>
         </div>
         <div id="botoes">
@@ -47,6 +44,6 @@
             <button id="dinheiro">DINHEIRO</button>
         </div>
     </main>
-   <script src="../js/pagamento.js"></script>
+    <script src="../js/pagamento.js"></script>
 </body>
 </html>
