ajustes na interface e estilização

--- a/app/index.html
+++ b/app/index.html
@@ -28,11 +28,14 @@
 
     <main class="content">
         <div id="card-formulario">
+            <div>
+            <h5>Cadastrar entrada de veículo </h5>
+            </div>
             <form id="formulario-principal" action="">
-                <input id="placa" class="form-control" placeholder="placa" type="text">
-                <input id="tipo" class="form-control" placeholder="tipo" type="text">
-                <input id="descricao" class="form-control" placeholder="descrição" type="text">
-                <button id="botao-form" type="button" class="btn btn-secondary" >&rarr;</button>
+                <input id="placa" class="form-control" placeholder="Placa" type="text">
+                <input id="tipo" class="form-control" placeholder="Tipo, exemplo: carro" type="text">
+                <input id="descricao" class="form-control" placeholder="descrição, exemplo: BYD DOLPHIN cor prata" type="text">
+                <button id="botao-form" type="button" class="btn btn-success" >&rarr;</button>
             </form>
         </div>
 
