alterações na logo

--- a/app/home.html
+++ b/app/home.html
@@ -10,7 +10,7 @@
 <body onload="startTime()">
     <div class="menu-lateral">
         <div class="logomarca">
-            <img src="../assets/img/logo-estaciona-fácil.png" alt="Logo">
+            <img src="../assets/img/logo smart park.png" alt="Logo">
         </div>
         <a class="icones" href="home.html"><img src="../assets/img/icone-casa-cinza.png" alt=""></a>
         <a class="icones" href="index.html"><img src="../assets/img/icone-estacionar.png" alt=""></a>
