--- a/app/pagamento.html
+++ b/app/pagamento.html
@@ -10,7 +10,7 @@
 <body onload="startTime()">
     <div class="menu-lateral">
         <div class="logomarca">
-            <img src="../assets/img/logo-estaciona-fácil.png" alt="Logo">
+            <img src="../assets/img/logo smart park.png" alt="Logo">
         </div>
         <a class="icones" href="home.html"><img src="../assets/img/icone-casa-cinza.png" alt=""></a>
         <a class="icones" href="index.html"><img src="../assets/img/icone-estacionar.png" alt=""></a>
@@ -40,7 +40,7 @@
                 </div>
                 
                 <div id="imagem">
-                    <img id="logo" src="../assets/img/logo estaciona fácil preto.png" alt="">
+                    <img id="logo" src="../assets/img/logo smart park azul e preto.png" alt="">
                 </div>
             </div>
             <div id="botoes">
