--- a/app/pagamento.html
+++ b/app/pagamento.html
@@ -15,8 +15,11 @@
         <a class="icones" href="home.html"><img src="../assets/img/icone-casa-cinza.png" alt=""></a>
         <a class="icones" href="index.html"><img src="../assets/img/icone-estacionar.png" alt=""></a>
         <a class="icones" href="pagamento.html"><img src="../assets/img/icone-pagamento.png" alt=""></a>
-        <a class="icones" href="#"><img src="../assets/img/icone-recibo.png" alt=""></a>
-        <a class="icones" href="#"><img src="../assets/img/icone-configuracoes.png" alt=""></a>
+        <a class="icones" href="#"><img src="../assets/img/clientes.png" alt="clientes"></a>
+        <a class="icones" href="#"><img src="../assets/img/mensalistas.png" alt="mensalistas"></a>
+        <a class="icones" href="#"><img src="../assets/img/caixa.png" alt="caixa"></a>
+        <a class="icones" href="#"><img src="../assets/img/Tabela-de-precos.png" alt="tabela de preços"></a>
+        <a class="icones" href="#"><img src="../assets/img/busca.png" alt="buscar"></a>
     </div>
 
     <div class="topbar">
