--- a/app/clientes.html
+++ b/app/clientes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../assets/style-clientes.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Sistema estacionamento</title>
 </head>
@@ -33,16 +33,29 @@
     <main class="content">
         <div id="card-formulario">
             <div>
-            <h5>Cadastrar entrada de veículo </h5>
+            <h5>Cadastrar Cliente</h5>
             </div>
             <form id="formulario-principal" action="">
-                <label for="">Placa</label>
-                <input id="placa" class="form-control" placeholder="Placa" type="text">
-                <label for="">Tipo</label>
-                <input id="tipo" class="form-control" placeholder="exemplo: carro" type="text">
-                <label for="">Descrição</label>
-                <input id="descricao" class="form-control" placeholder="digite o modelo e cor exemplo: BYD DOLPHIN cor prata" type="text">
-                <button id="botao-form" type="button" class="btn btn-success" >&rarr;</button>
+                
+                <label for="">Nome</label>
+                <input type="text" class="form-control" placeholder="digite o nome do cliente">
+                <label for="">CPF</label>
+                <input type="text" class="form-control" placeholder="digite o CPF do cliente">
+                <label for="">data_de_nascimento</label>
+                <input type="text" class="form-control" placeholder="digite a data denascimento ">
+                <label for="">celular</label>
+                <input type="text" class="form-control" placeholder="digite o celular">
+                <label for="">endereço</label>
+                <input type="text" class="form-control" placeholder="digite o endereço">
+                <label for="">Bairro</label>
+                <input type="text" class="form-control" placeholder="digite o bairro">
+                <label for="">Cidade</label>
+                <input type="text" class="form-control" placeholder="digite a cidade">
+                <label for="">UF</label>
+                <input type="text" class="form-control" placeholder="digite a UF">
+                <label for="">CEP</label>
+                <input type="text" class="form-control" placeholder="digite o CEP">
+
             </form>
         </div>
 
@@ -50,22 +63,24 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th>Placa</th>
-                        <th>Tipo</th>
-                        <th>Descrição</th>
-                        <th>Hora</th>
-                        <th>Valor da Hora</th>
-                        <th>Forma de Pagamento</th>
-                        <th>Status</th>
-                        <th>Hora de Saída</th>
-                        <th>Ações</th>
+                        <th>Código</th>
+                        <th>Nome</th>
+                        <th>CPF</th>
+                        <th>data_de_nascimento</th>
+                        <th>Sexo</th>
+                        <th>celular</th>
+                        <th>endereço</th>
+                        <th>Bairro</th>
+                        <th>Cidade</th>
+                        <th>UF</th>
+                        <th>CEP</th>
                     </tr>
                 </thead>
-                <tbody id="corpo-da-tabela">
+                <tbody >
                 </tbody>
             </table>
         </div>
     </main>
-    <script src="../js/script.js"></script>
+    <script src=""></script>
 </body>
 </html>
