alterações botão de pagar

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
             </div>
             <form id="formulario-principal" action="">
                 <label for="">Placa</label>
-                <input id="placa" class="form-control" placeholder="Placa" type="text">
+                <input id="placa" class="form-control" placeholder="Placa" type="text" minlength="3" maxlength="6">
                 <label for="">Tipo</label>
                 <input id="tipo" class="form-control" placeholder="exemplo: carro" type="text">
                 <label for="">Descrição</label>
