--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,8 @@
                 <input id="placa" class="form-control" placeholder="Placa" type="text" minlength="3" maxlength="6">
                 <label for="">Tipo</label>
                 <input id="tipo" class="form-control" placeholder="exemplo: carro" type="text">
+                <label for="">Cor</label>
+                <input id="cor" type="text" class="form-control" placeholder="Digite a cor do veículo" >
                 <label for="">Descrição</label>
                 <input id="descricao" class="form-control" placeholder="digite o modelo e cor exemplo: BYD DOLPHIN cor prata" type="text">
                 <button id="botao-form" type="button" class="btn btn-success" >&rarr;</button>
@@ -53,6 +55,7 @@
                         <th>Placa</th>
                         <th>Tipo</th>
                         <th>Descrição</th>
+                        <th>Cor</th>
                         <th>Hora</th>
                         <th>Valor da Hora</th>
                         <th>Forma de Pagamento</th>
