adicionado campo cor

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,8 @@
                 <input id="placa" class="form-control" placeholder="Placa" type="text">
                 <label for="">Tipo</label>
                 <input id="tipo" class="form-control" placeholder="exemplo: carro" type="text">
+                <label for="">Cor</label>
+                <input id="cor" type="text" class="form-control" placeholder="Digite a cor do veículo" >
                 <label for="">Descrição</label>
                 <input id="descricao" class="form-control" placeholder="digite o modelo e cor exemplo: BYD DOLPHIN cor prata" type="text">
                 <button id="botao-form" type="button" class="btn btn-success" >&rarr;</button>
@@ -55,6 +57,7 @@
                     <tr>
                         <th>Placa</th>
                         <th>Tipo</th>
+                        <th>Cor</th>
                         <th>Descrição</th>
                         <th>Hora</th>
                         <th>Valor da Hora</th>
